On runs and run interval the recommended option of double contacts is initially selected now

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -4568,7 +4568,6 @@ It starts before and arrives there with some speed.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
-                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             </widget>
                                                             <packing>
@@ -4598,6 +4597,7 @@ It starts before and arrives there with some speed.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
+                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             <property name="group">radio_runs_prevent_double_contact_first</property>
                                                             </widget>
@@ -5038,11 +5038,10 @@ It starts before and arrives there with some speed.</property>
                                                             <property name="spacing">4</property>
                                                             <child>
                                                             <widget class="GtkRadioButton" id="radio_runs_i_prevent_double_contact_first">
-                                                            <property name="label" translatable="yes">Take first contact (recommended)</property>
+                                                            <property name="label" translatable="yes">Take first contact</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
-                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             </widget>
                                                             <packing>
@@ -5053,10 +5052,11 @@ It starts before and arrives there with some speed.</property>
                                                             </child>
                                                             <child>
                                                             <widget class="GtkRadioButton" id="radio_runs_i_prevent_double_contact_average">
-                                                            <property name="label" translatable="yes">Take average</property>
+                                                            <property name="label" translatable="yes">Take average (recommended)</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
+                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             <property name="group">radio_runs_i_prevent_double_contact_first</property>
                                                             </widget>
