--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -29065,7 +29065,7 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
       </widget>
     </child>
   </widget>
-  <widget class="GtkWindow" id="preferences">
+  <widget class="GtkWindow" id="preferences_win">
     <property name="height_request">450</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
