--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -24964,7 +24964,6 @@ comments</property>
   <widget class="GtkWindow" id="execute_auto">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Automatic mode</property>
-    <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_delete_event" swapped="no"/>
@@ -25044,6 +25043,7 @@ comments</property>
                         <property name="shadow_type">in</property>
                         <child>
                           <widget class="GtkAlignment" id="alignment3">
+                            <property name="width_request">500</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="top_padding">8</property>
@@ -25055,7 +25055,7 @@ comments</property>
                                 <property name="height_request">120</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="hadjustment">0 0 404 40.400000000000006 363.60000000000002 404</property>
+                                <property name="hadjustment">0 0 580 58 522 580</property>
                                 <property name="hscrollbar_policy">automatic</property>
                                 <property name="vscrollbar_policy">automatic</property>
                                 <child>
